initial style guide

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos excepturi, maiores quae odio laborum eligendi impedit sunt velit, molestiae porro praesentium, doloribus placeat non quod quia reiciendis labore ex id.
+    </p>
 </body>
 </html>
