--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                         <img src="assets/icons/MagnifyingGlass.svg" alt="Ícone de lupa">
                     </a>
                 </li>
-                <li><a href="#">Explorar</a></li>
-                <li><a href="#">Minhas viagens</a></li>
+                <li><a href="#" class="desktop-only">Explorar</a></li>
+                <li><a href="#" class="desktop-only">Minhas viagens</a></li>
                 <li><a href="#">
                         <img src="assets/Profile-pic.png" alt="Imagem de Isabela Torres">
                     </a>
@@ -35,7 +35,7 @@
     
         <header>
             <div class="container">
-                <div id="profile">
+                <div id="profile" class="even-columns">
                     <img src="assets/Profile-pic.png" alt="Imagem de Isabela Torres">
                     <div>
                         <h1>Isabela Torres</h1>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
 
-                <ul id="info">
+                <ul id="info" class="even-columns">
                     <li>
                         <img src="assets/icons/MapPin.svg" alt="Icone de mapa">
                         <span>São Paulo, Brazil</span>
