improv: finalizado reposividade do footer

--- a/index.html
+++ b/index.html
@@ -84,9 +84,13 @@
     </main>
 
     <footer class="container">
-        <span>Travelgram &copy; 2024</span>
-        <span>Termos de uso</span>
-        <span>Política de privacidade</span>
+
+        <span id="copy">Travelgram &copy; 2024</span>
+        
+        <div class="terms-policy">
+            <span>Termos de uso</span>
+            <span>Política de privacidade</span>
+        </div>
     </footer>
 </body>
 </html>
